// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders with color and variant 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  white-space: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  padding: 0 7px;
  border-radius: 2px;
  background-color: #f5f5f5;
  color: #1f1f1f;
  font-size: 14px;
  line-height: 22px;
  height: 24px;
}

.emotion-1 {
  font-size: inherit;
  line-height: inherit;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Hello World
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders with color and variant 2`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  white-space: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  padding: 0 7px;
  border-radius: 2px;
  background-color: #ecfbf5;
  color: #007a41;
  font-size: 14px;
  line-height: 22px;
  height: 24px;
}

.emotion-1 {
  font-size: inherit;
  line-height: inherit;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Hello World
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders with color and variant 3`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  white-space: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  padding: 0 7px;
  border-radius: 2px;
  color: #fff;
  background-color: #123321;
  font-size: 14px;
  line-height: 22px;
  height: 24px;
}

.emotion-1 {
  font-size: inherit;
  line-height: inherit;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Hello World
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders with color and variant 4`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  white-space: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  padding: 0 7px;
  background-color: #000;
  color: #fff;
  border-radius: 2px;
  font-size: 14px;
  line-height: 22px;
  height: 24px;
}

.emotion-1 {
  font-size: inherit;
  line-height: inherit;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Hello World
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders with color and variant 5`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  white-space: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  padding: 0 7px;
  background-color: #007a41;
  color: #fff;
  border-radius: 2px;
  font-size: 14px;
  line-height: 22px;
  height: 24px;
}

.emotion-1 {
  font-size: inherit;
  line-height: inherit;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Hello World
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders with color and variant 6`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  white-space: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  padding: 0 7px;
  border-radius: 2px;
  color: #fff;
  background-color: #123321;
  font-size: 14px;
  line-height: 22px;
  height: 24px;
}

.emotion-1 {
  font-size: inherit;
  line-height: inherit;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Hello World
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders with color and variant 7`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  white-space: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  padding: 0 7px;
  border-radius: 2px;
  border: solid 1px #ebebeb;
  color: #1f1f1f;
  font-size: 14px;
  line-height: 22px;
  height: 24px;
}

.emotion-1 {
  font-size: inherit;
  line-height: inherit;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Hello World
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders with color and variant 8`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  white-space: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  padding: 0 7px;
  border-radius: 2px;
  border: solid 1px #007a41;
  color: #007a41;
  font-size: 14px;
  line-height: 22px;
  height: 24px;
}

.emotion-1 {
  font-size: inherit;
  line-height: inherit;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Hello World
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders with color and variant 9`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  white-space: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  padding: 0 7px;
  border-radius: 2px;
  color: #123321;
  border: solid 1px #123321;
  font-size: 14px;
  line-height: 22px;
  height: 24px;
}

.emotion-1 {
  font-size: inherit;
  line-height: inherit;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Hello World
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders with different size 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  white-space: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  padding: 0 7px;
  border-radius: 2px;
  background-color: #f5f5f5;
  color: #1f1f1f;
  font-size: 12px;
  line-height: 18px;
  height: 18px;
}

.emotion-1 {
  font-size: inherit;
  line-height: inherit;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Hello World
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders with different size 2`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  white-space: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  padding: 0 7px;
  border-radius: 2px;
  background-color: #f5f5f5;
  color: #1f1f1f;
  font-size: 14px;
  line-height: 22px;
  height: 24px;
}

.emotion-1 {
  font-size: inherit;
  line-height: inherit;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Hello World
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders with different size 3`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: middle;
  white-space: nowrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  padding: 0 7px;
  border-radius: 2px;
  background-color: #f5f5f5;
  color: #1f1f1f;
  font-size: 14px;
  line-height: 22px;
  height: 32px;
}

.emotion-1 {
  font-size: inherit;
  line-height: inherit;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
    class="emotion-0"
  >
    <span
      class="emotion-1"
    >
      Hello World
    </span>
  </div>
</DocumentFragment>
`;
